// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleStop renders and matches snapshot 1`] = `
"<SingleStop stop={{...}} onClick={[Function: onClick]} color=\\"000\\" liveData={[undefined]}>
  <div className=\\"m-schedule-diagram__stop\\">
    <div style={{...}} className=\\"m-schedule-diagram__lines\\">
      <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
        <svg viewBox=\\"0 10 10 10\\" preserveAspectRatio=\\"xMidYMin slice\\" width=\\"100%\\" height=\\"10px\\" className=\\"m-schedule-diagram__line-stop\\">
          <circle r=\\"4\\" cx=\\"50%\\" cy=\\"32px\\" />
        </svg>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop-content\\">
      <div className=\\"m-schedule-diagram__stop-heading\\">
        <div className=\\"m-schedule-diagram__stop-name\\">
          <a href=\\"/stops/place-xxx\\">
            <h4>
              <MatchHighlight text=\\"Example Stop\\" matchQuery={[undefined]}>
                <span>
                  Example Stop
                </span>
              </MatchHighlight>
            </h4>
          </a>
        </div>
        <div className=\\"m-schedule-diagram__features\\" />
      </div>
      <div className=\\"m-schedule-diagram__stop-details\\">
        <div className=\\"m-schedule-diagram__connections\\" />
      </div>
      <div className=\\"m-schedule-diagram__footer\\">
        <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
          View schedule
        </button>
      </div>
    </div>
  </div>
</SingleStop>"
`;

exports[`SingleStop renders with Commuter Rail live data 1`] = `
"<SingleStop stop={{...}} onClick={[Function: onClick]} color=\\"000\\" liveData={{...}}>
  <div className=\\"m-schedule-diagram__stop\\">
    <div style={{...}} className=\\"m-schedule-diagram__lines\\">
      <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
        <svg viewBox=\\"0 10 10 10\\" preserveAspectRatio=\\"xMidYMin slice\\" width=\\"100%\\" height=\\"10px\\" className=\\"m-schedule-diagram__line-stop\\">
          <circle r=\\"4\\" cx=\\"50%\\" cy=\\"32px\\" />
        </svg>
        <VehicleIcons routeType={2} stopName=\\"Example Stop\\" vehicles={{...}}>
          <div className=\\"m-schedule-diagram__vehicle m-schedule-diagram__vehicle--in_transit\\">
            <Component tooltipText=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">DestA train 404 is on the way to Example Stop</div>\\" tooltipOptions={{...}}>
              <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"right\\" data-animation={false} data-html={true} data-selector=\\"true\\" data-original-title=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">DestA train 404 is on the way to Example Stop</div>\\" title=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">DestA train 404 is on the way to Example Stop</div>\\">
                <span className=\\"notranslate m-schedule-diagram__vehicle--icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </Component>
          </div>
        </VehicleIcons>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop-content\\">
      <div className=\\"m-schedule-diagram__stop-heading\\">
        <div className=\\"m-schedule-diagram__stop-name\\">
          <a href=\\"/stops/place-xxx\\">
            <h4>
              <MatchHighlight text=\\"Example Stop\\" matchQuery={[undefined]}>
                <span>
                  Example Stop
                </span>
              </MatchHighlight>
            </h4>
          </a>
        </div>
        <div className=\\"m-schedule-diagram__features\\" />
      </div>
      <div className=\\"m-schedule-diagram__stop-details\\">
        <div className=\\"m-schedule-diagram__connections\\" />
        <StopPredictions headsigns={{...}} isCommuterRail={true}>
          <div className=\\"m-schedule-diagram__predictions\\">
            <div>
              <div className=\\"m-schedule-diagram__cr-prediction\\">
                <div className=\\"m-schedule-diagram__cr-prediction-time--delayed\\">
                  5:00 PM
                </div>
                <div className=\\"m-schedule-diagram__cr-prediction-time\\">
                  5:05 PM
                </div>
              </div>
              <div className=\\"m-schedule-diagram__cr-prediction-details\\">
                <span>
                  DestA
                </span>
                <span>
                   · Train 404
                </span>
                <span>
                   · Track 3
                </span>
                <span>
                   · Delayed 5 min
                </span>
              </div>
            </div>
          </div>
        </StopPredictions>
      </div>
      <div className=\\"m-schedule-diagram__footer\\">
        <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
          View schedule
        </button>
      </div>
    </div>
  </div>
</SingleStop>"
`;

exports[`SingleStop renders with live data 1`] = `
"<SingleStop stop={{...}} onClick={[Function: onClick]} color=\\"000\\" liveData={{...}}>
  <div className=\\"m-schedule-diagram__stop\\">
    <div style={{...}} className=\\"m-schedule-diagram__lines\\">
      <div className=\\"m-schedule-diagram__line m-schedule-diagram__line--stop\\">
        <svg viewBox=\\"0 10 10 10\\" preserveAspectRatio=\\"xMidYMin slice\\" width=\\"100%\\" height=\\"10px\\" className=\\"m-schedule-diagram__line-stop\\">
          <circle r=\\"4\\" cx=\\"50%\\" cy=\\"32px\\" />
        </svg>
        <VehicleIcons routeType={{...}} stopName=\\"Example Stop\\" vehicles={{...}}>
          <div className=\\"m-schedule-diagram__vehicle m-schedule-diagram__vehicle--stopped\\">
            <Component tooltipText=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">Vehicle has arrived at Example Stop</div>\\" tooltipOptions={{...}}>
              <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"right\\" data-animation={false} data-html={true} data-selector=\\"true\\" data-original-title=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">Vehicle has arrived at Example Stop</div>\\" title=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">Vehicle has arrived at Example Stop</div>\\">
                <span className=\\"notranslate m-schedule-diagram__vehicle--icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </Component>
          </div>
          <div className=\\"m-schedule-diagram__vehicle m-schedule-diagram__vehicle--incoming\\">
            <Component tooltipText=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">Vehicle is arriving at Example Stop</div>\\" tooltipOptions={{...}}>
              <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"right\\" data-animation={false} data-html={true} data-selector=\\"true\\" data-original-title=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">Vehicle is arriving at Example Stop</div>\\" title=\\"<div class=\\"m-schedule-diagram__vehicle-tooltip\\">Vehicle is arriving at Example Stop</div>\\">
                <span className=\\"notranslate m-schedule-diagram__vehicle--icon\\" aria-hidden=\\"false\\" dangerouslySetInnerHTML={{...}} />
              </span>
            </Component>
          </div>
        </VehicleIcons>
      </div>
    </div>
    <div className=\\"m-schedule-diagram__stop-content\\">
      <div className=\\"m-schedule-diagram__stop-heading\\">
        <div className=\\"m-schedule-diagram__stop-name\\">
          <a href=\\"/stops/place-xxx\\">
            <h4>
              <MatchHighlight text=\\"Example Stop\\" matchQuery={[undefined]}>
                <span>
                  Example Stop
                </span>
              </MatchHighlight>
            </h4>
          </a>
        </div>
        <div className=\\"m-schedule-diagram__features\\" />
      </div>
      <div className=\\"m-schedule-diagram__stop-details\\">
        <div className=\\"m-schedule-diagram__connections\\" />
        <StopPredictions headsigns={{...}} isCommuterRail={false}>
          <div className=\\"m-schedule-diagram__predictions\\">
            <div className=\\"m-schedule-diagram__prediction\\">
              <div>
                DestA
              </div>
              <div className=\\"m-schedule-diagram__prediction-time\\">
                Arriving
              </div>
              <div className=\\"m-schedule-diagram__prediction-crowding m-schedule-table-crowding\\">
                <span className=\\"notranslate c-svg__icon c-icon__crowding c-icon__crowding--crowding_unavailable\\" aria-hidden=\\"true\\" dangerouslySetInnerHTML={{...}} />
              </div>
            </div>
            <div className=\\"m-schedule-diagram__prediction\\">
              <div>
                DestB
              </div>
              <div className=\\"m-schedule-diagram__prediction-time\\">
                2   min
              </div>
              <Component tooltipText=\\"Currently <strong>crowded</strong>\\" tooltipOptions={{...}}>
                <span href={[undefined]} data-toggle=\\"tooltip\\" data-trigger=\\"hover focus\\" data-placement=\\"left\\" data-animation={false} data-html={true} data-selector=\\"true\\" data-original-title=\\"Currently <strong>crowded</strong>\\" title=\\"Currently <strong>crowded</strong>\\">
                  <div className=\\"m-schedule-diagram__prediction-crowding m-schedule-table-crowding\\">
                    <span className=\\"notranslate c-svg__icon c-icon__crowding c-icon__crowding--crowded\\" aria-hidden=\\"true\\" dangerouslySetInnerHTML={{...}} />
                  </div>
                </span>
              </Component>
            </div>
          </div>
        </StopPredictions>
      </div>
      <div className=\\"m-schedule-diagram__footer\\">
        <button className=\\"btn btn-link\\" type=\\"button\\" onClick={[Function: onClick]}>
          View schedule
        </button>
      </div>
    </div>
  </div>
</SingleStop>"
`;
